tutorial - better intro

--- a/blog/src/data/blog/php-docker-development-environment.mdx
+++ b/blog/src/data/blog/php-docker-development-environment.mdx
@@ -18,12 +18,17 @@ import "prismjs/components/prism-docker"
 
 ### Intro
 
-When we build tools we must think in our users. The time they need to become proficient with them, depends on the ideas that drive our design.  
-I think internal tools and processes shouldn't be an exception to this; Empathy it's key to increase the business outcomes produced with them.  
+Maybe because I studied psychology for a few years, before getting back into software development. 
+Or maybe because I try to learn a little bit of the business and organizational side on every project I work. 
+Is that I've come to the conclusion, that human factors outweigh technical ones, in the fate of most business ideas. 
+Simply because humans time is way more expensive than computers time, and human tasks take much longer as well.
+So whenever I am working on internal tools, I try to think on the users like I do with customers; 
+Empathy in my opinion, it's key to increase the business outcomes produced with them.  
 
 <br />
 
-In this post you will use Docker to wrap a PHP project into a full fledged, portable development environment, with several tools to debug software issues effectively.  
+In this post you will use Docker to wrap a PHP project into a full fledged, portable, development environment. With several tools to debug and understand your application.
+Hopefully, the features contained on this development environment, will help you and your team, become more effective on your day to day duties.
 
 ### Requirements
 
